XML 8.6.21 päivitys osa 2/2 valmis Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.6.21.

--- a/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
@@ -12,7 +12,7 @@
   <string name="action_item_favorite">Lisää suosikiksi</string>
   <string name="action_item_hide">Piilota</string>
   <string name="action_item_hifi">Kuulokkeet &amp; äänitehosteet</string>
-  <string name="action_item_play_all">Toista sekoittaen</string>
+  <string name="action_item_play_all">Sekoita kaikki</string>
   <string name="action_item_play_next">Toista myöhemmin</string>
   <string name="action_item_remove">Poista</string>
   <string name="action_item_remove_from_favorite">Poista suosikeista</string>
@@ -61,8 +61,6 @@
   <string name="asset_sync_power_alert_message">Varmuuskopioi kappaleita yhdistämällä laturi.</string>
   <string name="asset_sync_power_alert_title">Akku vähissä</string>
   <string name="audio_picker_title">Valitse kappale</string>
-  <string name="audio_recognition_setting_summary">Hae laitteen albumeiden kansikuvat ja kappaleiden sanoitukset automaattisesti</string>
-  <string name="audio_recognition_setting_title">Hae albumeiden kansikuvat ja sanoitukset</string>
   <string name="auto_payment">Automaattinen uusiminen</string>
   <string name="auto_payment_date">Seuraava maksu: %s</string>
   <string name="available_playlist_name_format">Uusi soittolista %d</string>
@@ -91,6 +89,7 @@
   <string name="cancel">Peruuta</string>
   <string name="cancel_running_download">Peruuta</string>
   <string name="change_download_quality">Vaihda latauksen laatu</string>
+  <string name="checking_new_version">Tarkistetaan päivityksiä…</string>
   <string name="choose_download_quality">Valitse latauksen laatu</string>
   <string name="choose_language">Valitse kieli</string>
   <string name="choose_stream_quality">Valitse suoratoiston laatu</string>
@@ -130,7 +129,8 @@
   <string name="common_signin_button_text">Kirjaudu sisään</string>
   <string name="common_signin_button_text_long">Kirjaudu sisään käyttäen Googlea</string>
   <string name="confirm">OK</string>
-  <string name="confirm_exit">Muutoksiasi ei ole tallennettu. Haluatko tallentaa muutokset?</string>
+  <string name="confirm_exit">Tallennetaanko muutokset?</string>
+  <string name="connect_now">Yhdistä</string>
   <string name="connecting_apk">Yhdistetään…</string>
   <string name="continue_backup">Jatka</string>
   <string name="count_format">%2$1.1fK</string>
@@ -169,8 +169,8 @@
   <string name="dialog_file_already_exists">Ei voi ladata. Tiedosto on jo olemassa.</string>
   <string name="dialog_file_missing_body">Ladattua tiedostoa ei löydy.</string>
   <string name="dialog_file_missing_title">Tiedostoa ei voi avata</string>
-  <string name="dialog_insufficient_space_on_cache">Sisäisellä tallennustilalla ei ole tarpeeksi tilaa</string>
-  <string name="dialog_insufficient_space_on_external">Ulkoisella tallennustilalla ei ole tarpeeksi tilaa</string>
+  <string name="dialog_insufficient_space_on_cache">Latausta ei voi suorittaa loppuun. Sisäisellä tallennustilalla ei ole tarpeeksi tilaa.</string>
+  <string name="dialog_insufficient_space_on_external">Latausta ei voi suorittaa loppuun. SD-kortilla ei ole tarpeeksi tilaa.</string>
   <string name="dialog_media_not_found">Ei voi ladata. Ulkoinen media ei ole käytettävissä.</string>
   <string name="dialog_queued_body">Tämä tiedosto on latausjonossa.</string>
   <string name="dialog_song_sort_type">Lajittele</string>
@@ -194,7 +194,7 @@
   <string name="disable_auto_payment_success_message">Automaattinen uusiminen poistettiin käytöstä. Kun tämän hetkinen tilauksesi loppuu, joudut uusimaan tilauksesi uudelleen ladataksesi kappaleita.</string>
   <string name="disallow_add_to_fm">FM Radioon ei voi lisätä kappaleita</string>
   <string name="disallow_add_to_personal_radio">Henkilökohtaiseen radioon ei voi lisätä kappaleita</string>
-  <string name="do_not_remind_this_version">Älä muistuta tästä versiosta</string>
+  <string name="do_not_remind_this_version">Älä muistuta minua tästä versiosta</string>
   <string name="download">Lataa</string>
   <string name="download_added_to_list">Lisättiin latauslistalle</string>
   <string name="download_apk_desktop_installing">Asennetaan</string>
@@ -217,6 +217,8 @@
   <string name="download_completed">Ladattu</string>
   <string name="download_confirm_button_text">Asenna</string>
   <string name="download_confirm_text">Mi Musiikki lataa ja asentaa \"%s\"</string>
+  <string name="download_connect_wifi_dialog_message">Tarvitset Wi-Fi-verkon ladataksesi tämän kappaleen. Yhdistetäänkö nyt?</string>
+  <string name="download_connect_wifi_dialog_title">Yhdistä Wi-Fi-verkkoon</string>
   <string name="download_done_btn">Ladattu</string>
   <string name="download_error">Epäonnistui</string>
   <string name="download_error_insufficient_space">Tallennustilaa ei ole riittävästi</string>
@@ -297,6 +299,38 @@
   <string name="error_not_acceptable">Synkronointi ei ole käytössä.</string>
   <string name="error_title">Mi Tiliin ei voi synkronoida</string>
   <string name="error_unauthorized">Liian monen kirjautumisyrityksen takia synkronointi on otettu pois käytöstä.</string>
+  <string name="exo_controls_fastforward_description">Kelaa eteenpäin</string>
+  <string name="exo_controls_fullscreen_description">Kokonäyttötila</string>
+  <string name="exo_controls_next_description">Seuraava raita</string>
+  <string name="exo_controls_pause_description">Pysäytä</string>
+  <string name="exo_controls_play_description">Toista</string>
+  <string name="exo_controls_previous_description">Edellinen raita</string>
+  <string name="exo_controls_repeat_all_description">Toista kaikki</string>
+  <string name="exo_controls_repeat_off_description">Älä toista</string>
+  <string name="exo_controls_repeat_one_description">Toista kerran</string>
+  <string name="exo_controls_rewind_description">Kelaa taaksepäin</string>
+  <string name="exo_controls_shuffle_description">Sekoita</string>
+  <string name="exo_controls_stop_description">Lopeta</string>
+  <string name="exo_download_completed">Lataus valmistui</string>
+  <string name="exo_download_description">Lataa</string>
+  <string name="exo_download_downloading">Ladataan</string>
+  <string name="exo_download_failed">Lataus epäonnistui</string>
+  <string name="exo_download_notification_channel_name">Lataukset</string>
+  <string name="exo_download_removing">Poistetaan latauksia</string>
+  <string name="exo_item_list">%1$s, %2$s</string>
+  <string name="exo_track_bitrate">%1$.2f Mbps</string>
+  <string name="exo_track_mono">Mono</string>
+  <string name="exo_track_resolution">%1$d × %2$d</string>
+  <string name="exo_track_selection_auto">Auto</string>
+  <string name="exo_track_selection_none">Ei mitään</string>
+  <string name="exo_track_selection_title_audio">Ääni</string>
+  <string name="exo_track_selection_title_text">Teksti</string>
+  <string name="exo_track_selection_title_video">Video</string>
+  <string name="exo_track_stereo">Stereo</string>
+  <string name="exo_track_surround">Surround-ääni</string>
+  <string name="exo_track_surround_5_point_1">5.1 surround-ääni</string>
+  <string name="exo_track_surround_7_point_1">7.1 surround-ääni</string>
+  <string name="exo_track_unknown">Tuntematon</string>
   <string name="expired">Vanhentunut</string>
   <string name="facebook_not_installed">Asenna Facebook ensin.</string>
   <string name="fail_to_fetch_payment_page_url">Maksutietoja ei saatu</string>
@@ -358,20 +392,22 @@
   <string name="global_search_title_movie">Elokuvien soittolista</string>
   <string name="global_search_title_prenatal">Raskaudenaikainen musiikki</string>
   <string name="global_search_title_radar">Musiikin tunnistus</string>
-  <string name="go_to_settings">Siirry asetuksiin</string>
   <string name="handle_later">Ei nyt</string>
+  <string name="headset_and_audio_effect_category">Kuulokkeet &amp; äänitehosteet</string>
+  <string name="headset_and_audio_effect_summary">Kuulokkeet &amp; taajuuskorjain</string>
+  <string name="headset_and_audio_effect_title">Kuulokkeet &amp; äänitehosteet</string>
   <string name="hide_album">Piilota albumin kansikuva</string>
   <string name="hide_lyric">Piilota sanoitukset</string>
   <string name="higher_quality_music">Korkea äänenlaatu</string>
   <string name="higher_quality_music_summary">Suoratoista ja lataa korkeamman bitraten tiedostoja</string>
   <string name="home_tab_local">Musiikkini</string>
-  <string name="home_tab_online">Tutustu</string>
+  <string name="home_tab_online">Online-musiikki</string>
   <string name="hot_icon_in_fast_indexer">H</string>
   <string name="hungama">Hungama</string>
   <string name="hungama_pro">Hungama Pro</string>
-  <string name="hungama_subscribe_message">Hei sinä! Käytä Pro:ta ladataksesi tämän kappaleen ja kaikki suosikkisi myös. Ota musiikkisi mukaan loistavalla äänenlaadulla.</string>
-  <string name="hungama_subscribe_positive_button">Käytä Pro:ta</string>
-  <string name="hungama_subscribe_title">PRO-palvelu</string>
+  <string name="hungama_subscribe_message">Osta PRO-jäsenyys lataaksesi korkealaatuista musiikkia.</string>
+  <string name="hungama_subscribe_positive_button">Osta PRO-jäsenyys</string>
+  <string name="hungama_subscribe_title">PRO-jäsenyys</string>
   <string name="i_know">OK</string>
   <string name="id_namespace">hungama</string>
   <string name="impunity_declaration_content">Sinun täytyy lukea ja hyväksyä meidän &lt;a href=\"http://www.miui.com/res/doc/eula.html?lang=en\"&gt;Käyttöehdot&lt;/a&gt; ja &lt;a href=\"http://www.miui.com/res/doc/privacy.html?lang=en\"&gt;Tietosuojakäytäntö&lt;/a&gt;, ennen palvelun käyttämistä.</string>
@@ -388,7 +424,7 @@
   <string name="input_hint_prefix">Anna %1$s</string>
   <string name="installing_apk">Asennetaan…</string>
   <string name="insufficient_space">Laitteesi sisäisellä tallennustilalla ei ole tarpeeksi tilaa</string>
-  <string name="intelligent_recognize">Albumien kansikuvat ja sanoitukset</string>
+  <string name="is_latest_version">Musiikki-sovellus on ajan tasalla.</string>
   <string name="is_scanning">Tarkistetaan tallennustilaa…</string>
   <string name="is_scanning_support_online">"Tarkistetaan tallennustilaa…
 (Sillä aikaa voit suoratoistaa musiikkia)"</string>
@@ -434,8 +470,8 @@
   <string name="metered_allow">Toista</string>
   <string name="metered_beyond_alert">Datan käyttö ylitetty</string>
   <string name="metered_disallow">Ei nyt</string>
-  <string name="metered_play_and_download_summary">Jos on auki ei muistuta toistamisesta ja lataa liikennettä</string>
-  <string name="metered_play_and_download_title">Käytä aina mobiilidataa</string>
+  <string name="metered_play_and_download_summary">Älä näytä tiedonsiirtovaroituksia, kun musiikkia suoratoistetaan tai kappaleita ladataan mobiilidatalla.</string>
+  <string name="metered_play_and_download_title">Suoratoista ja lataa kappaleita mobiilidatalla</string>
   <string name="metered_play_toast">Mobiilidatan käyttäminen kappaleiden toistoon</string>
   <string name="metered_play_toast_with_beyond_data">Käytetään mobiilidataa kappaleiden toistamiseen. Raja ylitettiin %s</string>
   <string name="metered_play_toast_with_data">Käytetään mobiilidataa kappaleiden toistamiseen, %s jäljellä</string>
@@ -456,7 +492,6 @@
   <string name="miuishare_wechat_timeline_title">Wechat hetket</string>
   <string name="miuishare_weibo_title">Weibo</string>
   <string name="mobile_recommended_title">Mobiilidatan käyttö</string>
-  <string name="modify_info_disable_note">Jos haluat muokata tietoja käsin, poista \"Hae albumien kansikuvat ja sanoitukset\" ensin käytöstä.</string>
   <string name="modify_lyric">Muokkaa sanoituksia</string>
   <string name="modify_progress">Muuta sanoituksien vierintänopeutta</string>
   <string name="modify_progress_helper">Säädä sanoituksien etenemistä pyyhkäisemällä ylös tai alas.</string>
@@ -485,7 +520,7 @@
   <string name="no_artist_info">Ei artistitietoja</string>
   <string name="no_downloads">Ei latauksia</string>
   <string name="no_favorites_songs">Tyhjä</string>
-  <string name="no_file_picker_find">Tiedostoselainta ei ole asennettu tälle laitteelle</string>
+  <string name="no_file_picker_find">Tiedostohallintaa ei ole asennettu.</string>
   <string name="no_local_songs">Tyhjä</string>
   <string name="no_local_songs_selected">Kappaleita ei voi lähettää, koska niitä ei ole ladattu</string>
   <string name="no_local_source_find">Kappaletta ei löytynyt</string>
@@ -528,8 +563,6 @@
   <string name="online_switch_setting">Online sisältöasetukset</string>
   <string name="open_online_service">Sinun täytyy ottaa online palvelut käyttöön käyttääksesi tätä ominaisuutta. Otetaanko käyttöön nyt?</string>
   <string name="open_service">Ota käyttöön</string>
-  <string name="optimize_all_until_optimized">Asetetaan uusi kansikuva ja sanoitukset…</string>
-  <string name="optimize_all_until_scanned">Odota, kunnes Musiikki-sovellus lopettaa tallennustilan ja kappaleiden tarkistamisen.</string>
   <string name="other_song_in_album">Muita kappaleita tästä albumista</string>
   <string name="paused_by_app">Pysäytetty</string>
   <string name="paused_in_power_save_mode">Pysäytetty Virransäästötilassa</string>
@@ -556,6 +589,8 @@
   <string name="play_mode_play_all">Toista kaikki</string>
   <string name="play_mode_shuffle_all">Sekoita</string>
   <string name="play_next">Toista seuraava</string>
+  <string name="play_video_with_traffic">JATKA</string>
+  <string name="play_video_with_traffic_toast">Käytät nyt mobiilidataa.</string>
   <string name="playlist_empty">Soittolistoja ei löytynyt.</string>
   <string name="playlist_title">Soittolistan nimi</string>
   <string name="playlist_title_is_empty">Soittolistan nimi ei voi olla tyhjä</string>
@@ -590,21 +625,6 @@
   <string name="radar_support_by">Tarjoaja ACRCloud</string>
   <string name="recently_played">Viimeksi soitetut</string>
   <string name="recently_played_songs">Viimeksi soitetut</string>
-  <string name="recognition_reverted_message">Albumin kansikuva ja sanoitukset poistettiin onnistuneesti. Voit tehdä saman kaikille kappaleille Asetuksissa.</string>
-  <string name="recognition_reverted_title">Albumien kansikuvat ja sanoitukset</string>
-  <string name="recognize_call">Optimoi</string>
-  <string name="recognize_call_summary">Mi Musiikki ei löytänyt tälle kappaleelle albumin kansikuvaa ja sanoituksia.</string>
-  <string name="recognize_calling">Muutoksia otetaan käyttöön…</string>
-  <string name="recognize_calling_fail">Tietoja ei löytynyt. Voit yrittää myöhemmin uudelleen.</string>
-  <string name="recognize_calling_network_error">Verkkoyhteyttä ei voitu muodostaa. Odota minuutti tai kaksi ja yritä uudelleen.</string>
-  <string name="recognize_revert">Hylkää muutokset</string>
-  <string name="recognize_revert_summary">Mi Musiikki löysi tälle kappaleelle albumin kansikuvan ja sanoitukset.</string>
-  <string name="recognize_reverting">Hylätään muutoksia…</string>
-  <string name="recognize_switch_off_alert_not_now">Ei nyt</string>
-  <string name="recognize_switch_off_alert_revert">Poista</string>
-  <string name="recognize_switch_off_alert_title">Albumien kansikuvat ja sanoitukset</string>
-  <string name="recognized_alert_message">Mi Musiikki löysi tälle kappaleelle albumin kansikuvan ja sanoitukset. Napauta \"…\" muokataksesi tietoja.</string>
-  <string name="recognized_alert_title">Löydettiin albumin kansikuva ja sanoitukset</string>
   <string name="recommended_file_size_download_in_mobile">Käytetäänkö %s mobiilidataa tämän tiedoston lataamiseen?</string>
   <string name="recommended_no_file_size_download_in_mobile">Käytetäänkö mobiilidata-yhteyttäsi tämän tiedoston lataamiseen?</string>
   <string name="remove">Poista</string>
@@ -681,9 +701,10 @@
   <string name="shuffle_music">Toista sekoittaen</string>
   <string name="shuffle_off_notif">Sekoitus ei käytössä.</string>
   <string name="shuffle_on_notif">Sekoitus käytössä.</string>
-  <string name="signup_type_silent_default">silent</string>
+  <string name="signup_type_silent_default">äänetön</string>
   <string name="signup_type_user_default">LoginSDK consumer</string>
-  <string name="similar_songs">Samanlaiset kappaleet</string>
+  <string name="similar_songs">Samankaltaiset kappaleet</string>
+  <string name="similar_videos">Samankaltaiset videot</string>
   <string name="sleep_mode">Nukkuma-ajastin</string>
   <string name="sleep_mode_canceled">Nukkuma-tila poistettu käytöstä</string>
   <string name="sleep_mode_summary">Lopeta soitin tietyn ajan jälkeen</string>
@@ -698,7 +719,7 @@
   <string name="songgroup_pick_playlist">Soittolistat</string>
   <string name="sort_by_name">Nimi</string>
   <string name="sort_by_time">Päiväys</string>
-  <string name="start_shuffle">Sekoitetaan…</string>
+  <string name="start_to_check_new_version">Tarkistetaan päivityksiä…</string>
   <string name="start_to_download">Ladataan…</string>
   <string name="start_to_play">Toista</string>
   <string name="stop">Lopeta</string>
@@ -717,6 +738,8 @@
   <string name="tab_track_list">Kappaleet</string>
   <string name="take_effect_afater_restart">Sinun täytyy käynnistää sovellus uudelleen tämän asetuksen tulemiseksi voimaan.</string>
   <string name="talkback_back">Takaisin</string>
+  <string name="talkback_batch_process">Useita kohteita</string>
+  <string name="talkback_clear">Tyhjennä</string>
   <string name="talkback_device">Toista toisessa laitteessa</string>
   <string name="talkback_download">Lataa</string>
   <string name="talkback_favorite">Tykkää tästä kappaleesta</string>
@@ -733,6 +756,7 @@
   <string name="talkback_pre">Edellinen kappale</string>
   <string name="talkback_radar">Musiikintunnistus</string>
   <string name="talkback_search">Haku</string>
+  <string name="talkback_show_navigation_draw">Näytä laatikko</string>
   <string name="terms_of_service">Palveluehdot</string>
   <string name="text_separator">|</string>
   <string name="ticket_summary">Osta lippuja näytöksiin, konsertteihin, esitelmiin ja muihin tapahtumiin</string>
@@ -755,11 +779,16 @@
   <string name="ultra_high_quality">Korkein</string>
   <string name="unknown_album_name">Tuntematon albumi</string>
   <string name="unknown_artist_name">Tuntematon artisti</string>
-  <string name="update_now">Päivitä nyt</string>
+  <string name="update_now">PÄIVITÄ NYT</string>
   <string name="upgrade_music">Päivitä Musiikki</string>
   <string name="upgrade_music_message">Paketti on valmis. Päivitä käynnistämällä uudelleen.</string>
+  <string name="upgrading_in_backstage">Päivitetään taustalla…</string>
   <string name="user_agreement">Käyttöehdot</string>
   <string name="version_info">Versio</string>
+  <string name="video_play_cellular">Laitteesi ei ole yhteydessä Wi-Fi-verkkoon. Käytetäänkö mobiilidataa?</string>
+  <string name="video_replay_btn">Toista uudelleen</string>
+  <string name="video_retry_btn">Yritä uudelleen</string>
+  <string name="view_album">Näytä albumi</string>
   <string name="vip_after_tomorrow_auto_renew_message">Musiikkitilauksesi uusitaan automaattisesti ylihuomenna illalla. Varmista, että sinulla on tarpeeksi Mi Krediittejä tililläsi suorittaaksesi maksun.</string>
   <string name="vip_after_tomorrow_renew_message">Et voi suoratoistaa korkean laadun musiikkia, mutta jotkut kappaleet ovat saatavilla normaalilla laadulla.</string>
   <string name="vip_auto_renew_message">Musiikkitilauksesi uusitaan automaattisesti tänä iltana. Varmista, että tililläsi on tarpeeksi Mi Krediittejä tämän maksun suorittamiseen.</string>
