--- a/Finnish/main/SmsExtra.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SmsExtra.apk/res/values-fi-rFI/strings.xml
@@ -2,7 +2,7 @@
 <resources>
   <string name="activity_not_found">Tälle toiminnolle ei löytynyt sovellusta</string>
   <string name="back_to_message_list">Takaisin viestiluetteloon</string>
-  <string name="confirm_delete_all_conversations">Poistetaanko kaikki keskustelut?</string>
+  <string name="button_close">Sulje</string>
   <string name="confirm_delete_conversation">Poistetaanko tämä koko palsta?</string>
   <string name="confirm_delete_group_message">Poistetaanko ryhmäviestit?</string>
   <string name="confirm_delete_locked_message">Poistetaanko tämä lukittu viesti?</string>
@@ -14,21 +14,33 @@
   <string name="delete">Poista</string>
   <string name="delete_message">Poista</string>
   <string name="from_label">"Lähettäjä: "</string>
+  <string name="hybrid_check_network">Verkkoasetukset</string>
+  <string name="hybrid_data_error">Tapahtui virhe</string>
+  <string name="hybrid_locating_fail">Sijaintiasi ei löytynyt</string>
+  <string name="hybrid_network_access_denied">Verkon käyttö kielletty</string>
+  <string name="hybrid_network_unavaliable">Verkkoyhteyttä ei voi muodostaa</string>
+  <string name="hybrid_pull_to_refresh_pull_label">Päivitä vetämällä…</string>
+  <string name="hybrid_pull_to_refresh_refreshing_label">Odota hetki…</string>
+  <string name="hybrid_pull_to_refresh_release_label">Päivitä päästämällä irti…</string>
+  <string name="hybrid_service_unavailiable">Palvelu ei käytettävissä</string>
+  <string name="hybrid_try_again">Yritä uudelleen</string>
+  <string name="imageview_ad">Mainos</string>
   <string name="menu_forward">Välitä</string>
   <string name="menu_lock">Suosikki</string>
   <string name="menu_unlock">Poista suosikeista</string>
   <string name="message_details_title">Viestin tiedot</string>
   <string name="message_type_label">"Tyyppi: "</string>
-  <string name="messaging">Viestit</string>
+  <string name="messaging">Viestintä</string>
+  <string name="packages_select_sim_cards_title">Valitse SIM-kortti</string>
   <string name="received_label">"Vastaanotettu: "</string>
   <string name="repayment_network_error">Verkossasi meni jotain pieleen</string>
   <string name="repayment_title">Takaisinmaksu</string>
   <string name="repayment_way">Takaisinmaksun tapa</string>
   <string name="sent_label">"Lähetetty: "</string>
+  <string name="sim1">SIM-kortti 1</string>
+  <string name="sim2">SIM-kortti 2</string>
   <string name="smart_messages_network_allow_message">Mi Viesti tarvitsee yhteyden internetiin, jotta sen palvelut toimivat normaalisti. Sallitaanko nyt?</string>
-  <string name="smart_messages_network_allow_title">Internet-yhteys vaaditaan</string>
-  <string name="sms_card_partner_label">"Tekstiviesti-kortin kumppani: "</string>
-  <string name="sms_card_teddy_mobile">Teddy Mobile</string>
+  <string name="smart_messages_network_allow_title">Internetyhteys vaaditaan</string>
   <string name="text_message">Tekstiviesti</string>
   <string name="view_message_details">Näytä tiedot</string>
 </resources>
